<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>w</groupId>
	<artifactId>swapper</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>swapper</name>
	<description>swapper</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<repositories>
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.sun</groupId>
			<artifactId>tools</artifactId>
			<version>1.8</version>
			<scope>system</scope>
			<systemPath>${JAVA8_HOME}/lib/tools.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.nanohttpd</groupId> <!-- <groupId>com.nanohttpd</groupId> for 2.1.0 and earlier -->
			<artifactId>nanohttpd</artifactId>
			<version>2.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.nanohttpd</groupId> <!-- <groupId>com.nanohttpd</groupId> for 2.1.0 and earlier -->
			<artifactId>nanohttpd-websocket</artifactId>
			<version>2.2.0</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.benf</groupId>-->
<!--			<artifactId>cfr</artifactId>-->
<!--			<version>0.152</version>-->
<!--		</dependency>-->

		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-commons -->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>9.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.codehaus.janino/janino -->
		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>janino</artifactId>
			<version>3.1.12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ognl/ognl -->
		<dependency>
			<groupId>ognl</groupId>
			<artifactId>ognl</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>4.0.22</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy-json</artifactId>
			<version>4.0.22</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy-jsr223</artifactId>
			<version>4.0.22</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.13.5</version>
		</dependency>
		<dependency>
			<groupId>com.github.sunwu51</groupId>
			<artifactId>fernflower</artifactId>
			<version>v0.0.1</version>
		</dependency>
		<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy-agent</artifactId>
			<version>1.14.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/classes/W-INF/lib</outputDirectory>
							<includeGroupIds>org.apache.groovy</includeGroupIds>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<artifactSet>
						<excludes>
							<exclude>org.apache.groovy:*</exclude>
						</excludes>
					</artifactSet>
				    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                              	<exclude>META-INF/*.DSA</exclude>
                              	<exclude>META-INF/*.RSA</exclude>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/LICENSE</exclude>
								<exclude>META-INF/services/com.fasterxml.jackson*</exclude>
								<exclude>META-INF/versions/**/*</exclude>
								<exclude>*.md</exclude>
								<exclude>AUTHORS</exclude>
								<exclude>LICENSE</exclude>
								<exclude>*.txt</exclude>
								<exclude>*.html</exclude>
								<exclude>*.properties</exclude>
                            </excludes>
                        </filter>
                    </filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<manifestEntries>
								<Main-Class>w.Attach</Main-Class>
								<Agent-Class>w.App</Agent-Class>
								<Can-Retransform-Classes>true</Can-Retransform-Classes>
							</manifestEntries>
						</transformer>
					</transformers>
					<relocations>
						<relocation>
							<pattern>com.fasterxml.jackson</pattern>
							<shadedPattern>wshade.com.fasterxml.jackson</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.objectweb.asm</pattern>
							<shadedPattern>wshade.org.objectweb.asm</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.codehaus.janino</pattern>
							<shadedPattern>wshade.org.codehaus.janino</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.codehaus.commons.compiler</pattern>
							<shadedPattern>wshade.org.codehaus.commons.compiler</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
